# gst-vimba

./: .gitignore  README  README.md  autogen.sh  configure.ac  showcamera.sh  startstreaming.sh  streamtest.sh
plugins/: Makefile.am  gstvimbasrc.c  gstvimbasrc.h  pixelformat.c  pixelformat.h  vimba.c  vimba.h  vimbacamera.c  vimbacamera.h
tools/: Makefile.am  gstvimba.c
